correction gap ul + couleurs liens

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -18,6 +18,6 @@ header {
   }
   ul {
     display: flex;
-    gap: 2rem;
+    gap: 3rem;
   }
 }
